--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
+	{% block header %} 
+    <div class="container"> 
+        <!-- Header --> 
+        <div class="header"> 
+            <nav> 
+                <ul class="nav nav-pills pull-right"> 
+                    <li role="presentation" class="active"><a href="./index.html">Blog</a></li> 
+                    <li role="presentation"><a href="./pages/about.html">About</a></li> 
+                </ul> 
+            </nav> 
+ 
+            <h3 class="text-muted">$_Bashful Bytes</h3> 
+        </div> 
+  
+	{% endblock %} 
+  <hr> 
+
   <body>
 	<div class="container">
 		{% block recent %}{% endblock %}
@@ -23,7 +40,7 @@
     	{% block content %}{% endblock %}
     	<footer class="footer">
       		{% block footer %}
-      			&copy; Built with <a href="https://www.python.org/">Python</a>, <a href="http://flask.pocoo.org/">Flask</a>, and <a href="http://getbootstrap.com/">Bootstrap</a>, May 2016</p>
+      			<center>&copy; Built with <a href="https://www.python.org/">Python</a>. June 2016</center>
 	  		{% endblock %}
     	</footer>
 	</div>
