playing with themes

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,13 @@
         <!-- Header --> 
         <div class="header"> 
             <nav> 
-                <ul class="nav  pull-right"> 
-                    <li role="presentation"><a href="./index.html">Blog</a></li> 
-                    <li role="presentation"><a href="./pages/about.html">About</a></li> 
-                </ul> 
-            </nav> 
+			<ul class="breadcrumb">
+  				<li><a href="./index.html">Blog</a></li>
+  				<li><a href="./pages/about.html">About</a></li>
+			</ul>
  
             <h3 class="text-muted">$_Bashful Bytes</h3> 
+          	</nav> 
         </div> 
 	{% endblock %} 
 
