--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <div class="header"> 
             <nav> 
 			<ul class="breadcrumb">
-            	<h3 class="text-muted">$_Bashful Bytes</h3> 
+            	<li><h3>$_Bashful Bytes</h3></li>
   				<li><a href="./index.html">Blog</a></li>
   				<li><a href="./pages/about.html">About</a></li>
 			</ul>
