--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -16,7 +16,7 @@
 
 	<div class="container">
 	
-	 
+	{% block header %} 
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
 			  <ul class="nav navbar-nav">
@@ -28,26 +28,17 @@
 			  </ul>
 		  </div>
 		</nav>
-	 
+	{% endblock %} 
 
   	<body>
-		<h3> Recent </h3>
-		
-		<hr>
-		<h3> Research </h3>
-		
-		<hr>
-		<h3> Programming </h3>
-		
-		<hr>
-		<h3> Random </h3>
-		
-
-      	
-    		<footer class="footer">
+    	{% block content %}
+		{% endblock %}
+    	<footer class="footer">
+      		{% block footer %}
       			<center>&copy; Breanna Devore-McDonald. Built with <a href="https://www.python.org/">Python</a>. June 2016</center>
-    		</footer>
-	  	
+	  		{% endblock %}
+    	</footer>
+
   	</body>
 	</div>
 </html>
