re-render with proper indexing

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,11 @@
 
 {% extends "base.html" %}
 {% block recent %}
-<p><a href="./posts/test6.html">2016-06-19</a><br />
-<a href="./posts/test.html">2016-06-18</a><br />
-<a href="./posts/test2.html">2016-06-18</a><br />
-<a href="./posts/test3.html">2016-06-18</a><br />
-<a href="./posts/test1.html">2016-06-18</a>  </p>
+<p><a href="./posts/test6.html">Sixth Test</a><br />
+<a href="./posts/test.html">Initial Test</a><br />
+<a href="./posts/test2.html">Test 2</a><br />
+<a href="./posts/test3.html">Test 3</a><br />
+<a href="./posts/test1.html">Test 1</a>  </p>
 {% endblock %}
 {% block research %}
 
