add wells, edit readme

--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -31,8 +31,12 @@
 	{% endblock %} 
 
   	<body>
+
+	<div class="well well-lg">
     	{% block content %}
 		{% endblock %}
+	</div>
+
     	<footer class="footer">
       		{% block footer %}
       			<center>&copy; Breanna Devore-McDonald. Built with <a href="https://www.python.org/">Python</a>. June 2016</center>
