--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
 	{% endblock %} 
 
   	<body>
+
+
+	<div class="well well-lg">
 		<h3> Recent </h3>
 		{% block recent %}{% endblock %}
 		<hr>
@@ -42,7 +45,7 @@
 		<hr>
 		<h3> Random </h3>
 		{% block random %}{% endblock %}
-
+	</div>
       	{% block footer %}
     		<footer class="footer">
       			<center>&copy; Breanna Devore-McDonald. Built with <a href="https://www.python.org/">Python</a>. June 2016</center>
