--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -31,9 +31,12 @@
 	{% endblock %} 
 
   	<body>
-    	{% block content %}
-		{% endblock %}
-    	<footer class="footer">
+    <div class="well well-lg">
+        {% block content %}
+        {% endblock %}
+    </div>
+	
+	<footer class="footer">
       		{% block footer %}
       			<center>&copy; Breanna Devore-McDonald. Built with <a href="https://www.python.org/">Python</a>. June 2016</center>
 	  		{% endblock %}
