--- a/templates/index.html
+++ b/templates/index.html
@@ -1,50 +1,24 @@
 
 {% extends "base.html" %}
 {% block recent %}
-<table class="table table-striped table-hover ">
-  <tbody>
-    <tr>
-<td>[Sixth Test](./posts/test6.html)</td>
-
-<p><td><a href="./posts/test.html">Initial Test</a></td><br />
-<td><a href="./posts/test2.html">Test 2</a></td><br />
-<td><a href="./posts/test3.html">Test 3</a></td><br />
-<td><a href="./posts/test1.html">Test 1</a></td>  </p>
-	</tr>
-  </tbody>
-</table>
+<p><a href="./posts/test6.html">Sixth Test</a><br />
+<a href="./posts/test.html">Initial Test</a><br />
+<a href="./posts/test2.html">Test 2</a><br />
+<a href="./posts/test3.html">Test 3</a><br />
+<a href="./posts/test1.html">Test 1</a>  </p>
 {% endblock %}
 {% block research %}
-<table class="table table-striped table-hover ">
-  <tbody>
-    <tr>
 
-	</tr>
-  </tbody>
-</table>
 {% endblock %}
 {% block programming %}
-<table class="table table-striped table-hover ">
-  <tbody>
-	<tr>
 
-	</tr>
-  </tbody>
-</table>
 {% endblock %}
 {% block random %}
-<table class="table table-striped table-hover ">
-  <tbody>
-	<tr>	
-<td>[Sixth Test](./posts/test6.html)</td>
-
-<p><td><a href="./posts/test.html">Initial Test</a></td><br />
-<td><a href="./posts/test2.html">Test 2</a></td><br />
-<td><a href="./posts/test3.html">Test 3</a></td><br />
-<td><a href="./posts/test1.html">Test 1</a></td><br />
-<td><a href="./posts/test4.html">Test 4</a></td><br />
-<td><a href="./posts/test5.html">Fifth Test</a></td>  </p>
-	</tr>
-  </tbody>
-</table>
+<p><a href="./posts/test6.html">Sixth Test</a><br />
+<a href="./posts/test.html">Initial Test</a><br />
+<a href="./posts/test2.html">Test 2</a><br />
+<a href="./posts/test3.html">Test 3</a><br />
+<a href="./posts/test1.html">Test 1</a><br />
+<a href="./posts/test4.html">Test 4</a><br />
+<a href="./posts/test5.html">Fifth Test</a>  </p>
 {% endblock %}
