change hr color

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,13 +36,13 @@
 	<div class="well well-lg">
 		<h2> Recent </h2>
 		{% block recent %}{% endblock %}
-		<hr>
+		<hr style="border: 1px solid #00264d" />
 		<h2> Research </h2>
 		{% block research %}{% endblock %}
-		<hr>
+		<hr style="border: 1px solid #00264d" />
 		<h2> Programming </h2>
 		{% block programming %}{% endblock %}
-		<hr>
+		<hr style="border: 1px solid #00264d" />
 		<h2> Random </h2>
 		{% block random %}{% endblock %}
 	</div>
