playing with size of hr

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 	<div class="well well-lg">
 		<h2> Recent </h2>
 		{% block recent %}{% endblock %}
-		<hr style="border: .5px solid #00264d" />
+		<hr style="border: #00264d" />
 		<h2> Research </h2>
 		{% block research %}{% endblock %}
 		<hr style="border: .5px solid #00264d" />
