--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,14 @@
 
 {% extends "base.html" %}
 {% block recent %}
-<p><a href="./posts/test6.html">Sixth Test</a><br />
+<p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
+<a href="./posts/test6.html">Sixth Test</a><br />
 <a href="./posts/test.html">Initial Test</a><br />
 <a href="./posts/test2.html">Test 2</a><br />
-<a href="./posts/test3.html">Test 3</a><br />
-<a href="./posts/test1.html">Test 1</a>  </p>
+<a href="./posts/test3.html">Test 3</a>  </p>
 {% endblock %}
 {% block research %}
-
+<p><a href="./posts/PLDI16.html">PLDI 2016</a>  </p>
 {% endblock %}
 {% block programming %}
 
