--- a/templates/index.html
+++ b/templates/index.html
@@ -2,23 +2,20 @@
 {% extends "base.html" %}
 {% block recent %}
 <p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
-<a href="./posts/test6.html">Sixth Test</a><br />
 <a href="./posts/test.html">Initial Test</a><br />
-<a href="./posts/test2.html">Test 2</a><br />
-<a href="./posts/test3.html">Test 3</a>  </p>
+<a href="./posts/test1.html">Test 1</a><br />
+<a href="./posts/test4.html">Test 4</a><br />
+<a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 {% endblock %}
 {% block research %}
 <p><a href="./posts/PLDI16.html">PLDI 2016</a>  </p>
 {% endblock %}
 {% block programming %}
-
+<p><a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 {% endblock %}
 {% block random %}
-<p><a href="./posts/test6.html">Sixth Test</a><br />
+<p><a href="./posts/test1.html">Test 1</a><br />
 <a href="./posts/test.html">Initial Test</a><br />
-<a href="./posts/test2.html">Test 2</a><br />
-<a href="./posts/test3.html">Test 3</a><br />
-<a href="./posts/test1.html">Test 1</a><br />
 <a href="./posts/test4.html">Test 4</a><br />
 <a href="./posts/test5.html">Fifth Test</a>  </p>
 {% endblock %}
