add cloud storage post

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,13 @@
 {% block recent %}
 <p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
 <a href="./posts/test.html">Initial Test</a><br />
+<a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
 <a href="./posts/test1.html">Test 1</a><br />
-<a href="./posts/test4.html">Test 4</a><br />
 <a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 {% endblock %}
 {% block research %}
-<p><a href="./posts/PLDI16.html">PLDI 2016</a>  </p>
+<p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
+<a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a>  </p>
 {% endblock %}
 {% block programming %}
 <p><a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
