edit about page

--- a/pages/templates/about.html
+++ b/pages/templates/about.html
@@ -1,12 +1,12 @@
 
 {% extends "base.html" %}
 {% block content %}
-<h2>Hello!</h2>
+<h1>Hello!</h1>
 
 <p>My name is Breanna Devore-McDonald and you have made your way
 to my personal weblog.  </p>
 
-<h2>Why Blog?</h2>
+<h1>Why Blog?</h1>
 
 <p>Amidst my grad school search, I have come across various weblogs
 of computer scientists in industry, research, and academia. Every 
@@ -19,7 +19,7 @@ scientists are behind all the knowledge, and what they do in their
 day-to-day life. I realized, that's exactly where I want to be, so 
 why not start acting like it now? Surprise! I am now a blogger.</p>
 
-<h2>About Me</h2>
+<h1>About Me</h1>
 
 <p><img class="img-circle" style="float: right;" src="/static/teek.jpg" width="225">
 I am a rising 4<sup>th</sup> year computer science student at
@@ -45,5 +45,44 @@ studying how software systems work and why they work,
 analyzing thought and and the amelioration of thought systems,
 which altogether forms a field of studying the beauty of computer
 science.</p>
+
+<h1>Contact Info</h1>
+
+<div class="row featurette">
+  <div class="col-md-6 text-left">
+   <h4>Email</h4>
+   <address>
+    <a href="mailto:#"> bdevorem@nd.edu</a><br>
+    <a href="mailto:#"> breannamcd11@gmail.com</a><br>
+    <a href="mailto:#"> br33zyxr@gmail.com</a><br>
+   </address>
+ </div>
+ <div class="col-md-6 text-left">
+  <h4>Snail Mail</h4>
+   <address>
+    <strong>Breanna Devore-McDonald</strong><br>
+    211 Lewis Hall<br>
+    Notre Dame, IN 46556<br>
+   </address>
+  </div>
+</div>
+
+<h1>Links</h1>
+
+<h3><a href="https://github.com/bdevorem/">Github</a></h3>
+
+<p>Here, you will find some of my coding projects, including
+<a href="https://github.com/bdevorem/bdevorem.github.io">this blog</a> 
+and my <a href="http://bdevorem.herokuapp.com/">personal website</a>.  </p>
+
+<h3><a href="https://bitbucket.org/bdevorem">Bitbucket</a></h3>
+
+<p>Here, you probably won't find any coding projects. Private
+repostitories are sometimes nice, too.  </p>
+
+<h3><a href="https://www.linkedin.com/in/bdevorem">LinkedIn</a></h3>
+
+<p>Here, you will find my professional webpage. Don't be alarmed,
+it still has some character to it.  </p>
 
 {% endblock %}
