add linux tag, add linux tag post skeleton

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 
 {% extends "base.html" %}
 {% block recent %}
-<p><a href="./posts/playlist.html">Current Playlist</a><br />
-<a href="./posts/PLDI16.html">PLDI 2016</a><br />
+<p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
 <a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
 <a href="./posts/expletive.html">Expletive</a><br />
+<a href="./posts/ubuntu_v_arch.html">Ubuntu vs Arch Linux</a><br />
 <a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 {% endblock %}
 {% block research %}
@@ -14,6 +14,9 @@
 {% endblock %}
 {% block programming %}
 <p><a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
+{% endblock %}
+{% block linux %}
+<p><a href="./posts/ubuntu_v_arch.html">Ubuntu vs Arch Linux</a>  </p>
 {% endblock %}
 {% block random %}
 <p><a href="./posts/playlist.html">Current Playlist</a>  </p>
