--- a/templates/index.html
+++ b/templates/index.html
@@ -2,23 +2,20 @@
 {% extends "base.html" %}
 {% block recent %}
 <p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
-<a href="./posts/TAing.html">My Experiences as an Undergraduate TA</a><br />
+<a href="./posts/playlist.html">Current Playlist</a><br />
+<a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
 <a href="./posts/expletive.html">Expletive</a><br />
-<a href="./posts/ubuntu_v_arch.html">Ubuntu vs Arch Linux</a><br />
 <a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 {% endblock %}
 {% block research %}
-<p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
-<a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
-<a href="./posts/expletive.html">Expletive</a>  </p>
+
 {% endblock %}
 {% block programming %}
-<p><a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
+
 {% endblock %}
 {% block linux %}
-<p><a href="./posts/ubuntu_v_arch.html">Ubuntu vs Arch Linux</a>  </p>
+
 {% endblock %}
 {% block random %}
-<p><a href="./posts/playlist.html">Current Playlist</a><br />
-<a href="./posts/TAing.html">My Experiences as an Undergraduate TA</a>  </p>
+
 {% endblock %}
