refactor index creation

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 {% block recent %}
 <p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
@@ -8,14 +7,30 @@
 <a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 {% endblock %}
 {% block research %}
-
+<p><a href="[datetime.date(2016, 6, 19), './posts/PLDI16.html']">PLDI 2016</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/playlist.html']">Current Playlist</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/cloudstorage.html']">Object vs Block vs File Storage Systems</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/staticsitegenerator.html']">Create Your Own Static Site Generator</a>  </p>
 {% endblock %}
 {% block programming %}
-
-{% endblock %}
-{% block linux %}
-
+<p><a href="[datetime.date(2016, 6, 19), './posts/PLDI16.html']">PLDI 2016</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/playlist.html']">Current Playlist</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/cloudstorage.html']">Object vs Block vs File Storage Systems</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/staticsitegenerator.html']">Create Your Own Static Site Generator</a>  </p>
 {% endblock %}
 {% block random %}
-
+<p><a href="[datetime.date(2016, 6, 19), './posts/PLDI16.html']">PLDI 2016</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/playlist.html']">Current Playlist</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/cloudstorage.html']">Object vs Block vs File Storage Systems</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/staticsitegenerator.html']">Create Your Own Static Site Generator</a>  </p>
+{% endblock %}
+{% block linux %}
+<p><a href="[datetime.date(2016, 6, 19), './posts/PLDI16.html']">PLDI 2016</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/playlist.html']">Current Playlist</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/cloudstorage.html']">Object vs Block vs File Storage Systems</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/staticsitegenerator.html']">Create Your Own Static Site Generator</a>  </p>
 {% endblock %}
