add a few more post skeletons

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,36 @@
 {% extends "base.html" %}
 {% block recent %}
-<p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
-<a href="./posts/playlist.html">Current Playlist</a><br />
-<a href="./posts/cloudstorage.html">Object vs Block vs File Storage Systems</a><br />
+<p><a href="./posts/parsingderivs.html">Parsing with Derivatives</a><br />
 <a href="./posts/expletive.html">Expletive</a><br />
-<a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
+<a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
+<a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
+<a href="./posts/expect.html">Expect: The Unix Tool</a>  </p>
 {% endblock %}
 {% block research %}
-<p><a href="[datetime.date(2016, 6, 19), './posts/PLDI16.html']">PLDI 2016</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/playlist.html']">Current Playlist</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/cloudstorage.html']">Object vs Block vs File Storage Systems</a><br />
+<p><a href="[datetime.date(2016, 6, 21), './posts/parsingderivs.html']">Parsing with Derivatives</a><br />
 <a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/staticsitegenerator.html']">Create Your Own Static Site Generator</a>  </p>
+<a href="[datetime.date(2016, 6, 21), './posts/hardware4cs.html']">Why Hardware Knowledge is Important in Computer Science Education</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/dublincoffee.html']">Best Coffee in Dublin</a><br />
+<a href="[datetime.date(2016, 6, 21), './posts/expect.html']">Expect: The Unix Tool</a>  </p>
 {% endblock %}
 {% block programming %}
-<p><a href="[datetime.date(2016, 6, 19), './posts/PLDI16.html']">PLDI 2016</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/playlist.html']">Current Playlist</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/cloudstorage.html']">Object vs Block vs File Storage Systems</a><br />
+<p><a href="[datetime.date(2016, 6, 21), './posts/parsingderivs.html']">Parsing with Derivatives</a><br />
 <a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/staticsitegenerator.html']">Create Your Own Static Site Generator</a>  </p>
+<a href="[datetime.date(2016, 6, 21), './posts/hardware4cs.html']">Why Hardware Knowledge is Important in Computer Science Education</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/dublincoffee.html']">Best Coffee in Dublin</a><br />
+<a href="[datetime.date(2016, 6, 21), './posts/expect.html']">Expect: The Unix Tool</a>  </p>
 {% endblock %}
 {% block random %}
-<p><a href="[datetime.date(2016, 6, 19), './posts/PLDI16.html']">PLDI 2016</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/playlist.html']">Current Playlist</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/cloudstorage.html']">Object vs Block vs File Storage Systems</a><br />
+<p><a href="[datetime.date(2016, 6, 21), './posts/parsingderivs.html']">Parsing with Derivatives</a><br />
 <a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/staticsitegenerator.html']">Create Your Own Static Site Generator</a>  </p>
+<a href="[datetime.date(2016, 6, 21), './posts/hardware4cs.html']">Why Hardware Knowledge is Important in Computer Science Education</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/dublincoffee.html']">Best Coffee in Dublin</a><br />
+<a href="[datetime.date(2016, 6, 21), './posts/expect.html']">Expect: The Unix Tool</a>  </p>
 {% endblock %}
 {% block linux %}
-<p><a href="[datetime.date(2016, 6, 19), './posts/PLDI16.html']">PLDI 2016</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/playlist.html']">Current Playlist</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/cloudstorage.html']">Object vs Block vs File Storage Systems</a><br />
+<p><a href="[datetime.date(2016, 6, 21), './posts/parsingderivs.html']">Parsing with Derivatives</a><br />
 <a href="[datetime.date(2016, 6, 19), './posts/expletive.html']">Expletive</a><br />
-<a href="[datetime.date(2016, 6, 19), './posts/staticsitegenerator.html']">Create Your Own Static Site Generator</a>  </p>
+<a href="[datetime.date(2016, 6, 21), './posts/hardware4cs.html']">Why Hardware Knowledge is Important in Computer Science Education</a><br />
+<a href="[datetime.date(2016, 6, 19), './posts/dublincoffee.html']">Best Coffee in Dublin</a><br />
+<a href="[datetime.date(2016, 6, 21), './posts/expect.html']">Expect: The Unix Tool</a>  </p>
 {% endblock %}
