--- a/pages/templates/ideas.html
+++ b/pages/templates/ideas.html
@@ -5,13 +5,10 @@
 
 <h3>get outta my head</h3>
 
-<p>Expect <br />
-Why computer architecture is important in computer science education <br />
-GREs <br />
+<p>GREs <br />
 Semantic web stuffs <br />
 Lamby <br />
 Sentiment wars <br />
-Parsing w derivatives <br />
 Learning Haskell <br />
 Learning Racket <br />
 i3wm <br />
@@ -19,7 +16,6 @@ Anonymous proxy rpi <br />
 Rpi server farm (if LUG ever does this) <br />
 rpi music server (maybe?) <br />
 Basics of making a dynamic site w django (after project is done) <br />
-Coffee shops in Dublin <br />
 Coffee shops in San Jose  </p>
 
 {% endblock %}
