redirection for staticjinja

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,15 +13,15 @@
 <a href="./posts/parsingderivs.html">Parsing with Derivatives</a>  </p>
 {% endblock %}
 {% block programming %}
-<p><a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
-<a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
+<p><a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 {% endblock %}
 {% block linux %}
 <p><a href="./posts/expect.html">Expect: The Unix Tool</a><br />
 <a href="./posts/ubuntu_v_arch.html">Ubuntu vs Arch Linux</a>  </p>
 {% endblock %}
 {% block random %}
-<p><a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
+<p><a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
+<a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
 <a href="./posts/playlist.html">Current Playlist</a><br />
 <a href="./posts/TAing.html">My Experiences as an Undergraduate TA</a>  </p>
 {% endblock %}
