add back button; re render

--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -34,6 +34,10 @@
     <div class="well well-lg">
         {% block content %}
         {% endblock %}
+
+		<ul class="pager">
+  			<li class="previous"><a href="../index.html">&larr;Back</a></li>
+		</ul>
     </div>
 	
 	<footer class="footer">
