--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block recent %}
 <p><a href="./posts/parsingderivs.html">Parsing with Derivatives</a><br />
-<a href="./posts/expletive.html">Expletive</a><br />
 <a href="./posts/hardware4cs.html">Why Hardware Knowledge is Important in Computer Science Education</a><br />
 <a href="./posts/dublincoffee.html">Best Coffee in Dublin</a><br />
-<a href="./posts/expect.html">Expect: The Unix Tool</a>  </p>
+<a href="./posts/expect.html">Expect: The Unix Tool</a><br />
+<a href="./posts/staticsitegenerator.html">Create Your Own Static Site Generator</a>  </p>
 {% endblock %}
 {% block research %}
 <p><a href="./posts/PLDI16.html">PLDI 2016</a><br />
