--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -1090,7 +1090,7 @@ body {
   font-size: 15px;
   line-height: 1.42857143;
   color: #ecf0f1;
-  background-color: #2b3e50;
+  background-color: #2c3e50;
 }
 input,
 button,
@@ -1135,7 +1135,7 @@ img {
 .img-thumbnail {
   padding: 4px;
   line-height: 1.42857143;
-  background-color: #2b3e50;
+  background-color: #2c3e50;
   border: 1px solid #dddddd;
   border-radius: 0;
   -webkit-transition: all 0.2s ease-in-out;
@@ -2297,7 +2297,7 @@ th {
   border-top: 2px solid #b4bcc2;
 }
 .table .table {
-  background-color: #2b3e50;
+  background-color: #2c3e50;
 }
 .table-condensed > thead > tr > th,
 .table-condensed > tbody > tr > th,
@@ -2550,7 +2550,7 @@ output {
   padding-top: 9px;
   font-size: 15px;
   line-height: 1.42857143;
-  color: #2b3e50;
+  color: #2c3e50;
 }
 .form-control {
   display: block;
@@ -2559,7 +2559,7 @@ output {
   padding: 8px 16px;
   font-size: 15px;
   line-height: 1.42857143;
-  color: #2b3e50;
+  color: #2c3e50;
   background-color: #ffffff;
   background-image: none;
   border: 1px solid transparent;
@@ -3553,7 +3553,7 @@ tbody.collapse.in {
   height: 1px;
   margin: 9.5px 0;
   overflow: hidden;
-  background-color: #2b3e50;
+  background-color: #2c3e50;
 }
 .dropdown-menu > li > a {
   display: block;
@@ -3581,7 +3581,7 @@ tbody.collapse.in {
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
 .dropdown-menu > .disabled > a:focus {
-  color: #2b3e50;
+  color: #2c3e50;
 }
 .dropdown-menu > .disabled > a:hover,
 .dropdown-menu > .disabled > a:focus {
@@ -3610,7 +3610,7 @@ tbody.collapse.in {
   padding: 3px 20px;
   font-size: 12px;
   line-height: 1.42857143;
-  color: #2b3e50;
+  color: #2c3e50;
   white-space: nowrap;
 }
 .dropdown-backdrop {
@@ -3906,7 +3906,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   font-size: 15px;
   font-weight: normal;
   line-height: 1;
-  color: #2b3e50;
+  color: #2c3e50;
   text-align: center;
   background-color: #b4bcc2;
   border: 1px solid transparent;
@@ -4041,7 +4041,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
   color: #ecf0f1;
-  background-color: #2b3e50;
+  background-color: #2c3e50;
   border: 1px solid #b4bcc2;
   border-bottom-color: transparent;
   cursor: default;
@@ -5009,7 +5009,7 @@ a.badge:focus {
   padding: 4px;
   margin-bottom: 21px;
   line-height: 1.42857143;
-  background-color: #2b3e50;
+  background-color: #2c3e50;
   border: 1px solid #dddddd;
   border-radius: 0;
   -webkit-transition: border 0.2s ease-in-out;
@@ -5938,7 +5938,7 @@ button.close {
 }
 .modal-header {
   padding: 15px;
-  border-bottom: 1px solid #2b3e50;
+  border-bottom: 1px solid #2c3e50;
 }
 .modal-header .close {
   margin-top: -2px;
@@ -5954,7 +5954,7 @@ button.close {
 .modal-footer {
   padding: 20px;
   text-align: right;
-  border-top: 1px solid #2b3e50;
+  border-top: 1px solid #2c3e50;
 }
 .modal-footer .btn + .btn {
   margin-left: 5px;
@@ -6844,7 +6844,7 @@ table > tfoot > tr > td,
 }
 input,
 textarea {
-  color: #2b3e50;
+  color: #2c3e50;
 }
 label,
 .radio label,
