--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -5826,7 +5826,7 @@ button.list-group-item-danger.active:focus {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #b4bcc2;
+  background-color: #ecf0f1;
   border: 1px solid transparent;
   border-radius: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
@@ -6992,7 +6992,7 @@ a.list-group-item-danger.active:focus {
   color: #ecf0f1;
 }
 .thumbnail {
-  background-color: #b4bcc2;
+  background-color: #ecf0f1;
   border: none;
 }
 .modal {
